# src/routes/index.ts
@@ -5,6 +5,7 @@ import express, { Router } from 'express'
 import { NotificationRoutes } from '../app/modules/notifications/notifications.route'
 import { PublicRoutes } from '../app/modules/public/public.route'
 import { JobRoutes } from '../app/modules/job/job.route'
+import { ApplicantRoutes } from '../app/modules/applicant/applicant.route'
 
 const router = express.Router()
 
@@ -16,8 +17,10 @@ const apiRoutes: { path: string; route: Router }[] = [
   { path: '/notifications', route: NotificationRoutes },
 
   { path: '/public', route: PublicRoutes },
-,
-  { path: '/job', route: JobRoutes }]
+
+  { path: '/job', route: JobRoutes },
+  // { path: '/applicant', route: ApplicantRoutes }
+]
 
 apiRoutes.forEach(route => {
   router.use(route.path, route.route)
